{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 49,
  "lineage": "bd4be0be-a58d-7f33-d6d6-8b8ba457e7cc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "raxxo_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:989323701041:internet-gateway/igw-0c053bd4756f6dfdf",
            "id": "igw-0c053bd4756f6dfdf",
            "owner_id": "989323701041",
            "region": "us-east-1",
            "tags": {
              "Name": "RaxxoIGW"
            },
            "tags_all": {
              "Name": "RaxxoIGW"
            },
            "vpc_id": "vpc-0f162a65890522d02"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.raxxo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c053bd4756f6dfdf",
            "id": "r-rtb-09d9172ddccc64ca51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-09d9172ddccc64ca5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.raxxo_igw",
            "aws_route_table.raxxo_route_table",
            "aws_vpc.raxxo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "raxxo_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:989323701041:route-table/rtb-09d9172ddccc64ca5",
            "id": "rtb-09d9172ddccc64ca5",
            "owner_id": "989323701041",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c053bd4756f6dfdf",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RaxxoRouteTable"
            },
            "tags_all": {
              "Name": "RaxxoRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f162a65890522d02"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.raxxo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0653a9040760aeda4",
            "region": "us-east-1",
            "route_table_id": "rtb-09d9172ddccc64ca5",
            "subnet_id": "subnet-025bfeebae5a3320e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.raxxo_route_table",
            "aws_subnet.raxxo_subnet_1",
            "aws_vpc.raxxo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea1c27081e1a4cf8",
            "region": "us-east-1",
            "route_table_id": "rtb-09d9172ddccc64ca5",
            "subnet_id": "subnet-0082b13a504cffd96"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.raxxo_route_table",
            "aws_subnet.raxxo_subnet_2",
            "aws_vpc.raxxo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "raxxo_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:989323701041:subnet/subnet-025bfeebae5a3320e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.10.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-025bfeebae5a3320e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "989323701041",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "RaxxoSubnet1"
            },
            "tags_all": {
              "Name": "RaxxoSubnet1"
            },
            "vpc_id": "vpc-0f162a65890522d02"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.raxxo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "raxxo_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:989323701041:subnet/subnet-0082b13a504cffd96",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.10.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0082b13a504cffd96",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "989323701041",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "RaxxoSubnet2"
            },
            "tags_all": {
              "Name": "RaxxoSubnet2"
            },
            "vpc_id": "vpc-0f162a65890522d02"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.raxxo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "raxxo_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:989323701041:vpc/vpc-0f162a65890522d02",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.10.0/27",
            "default_network_acl_id": "acl-05bd29b826f8cfa92",
            "default_route_table_id": "rtb-0531512fc3a00f763",
            "default_security_group_id": "sg-019c2965a97608a61",
            "dhcp_options_id": "dopt-06ce8625c49b0fb8e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f162a65890522d02",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0531512fc3a00f763",
            "owner_id": "989323701041",
            "region": "us-east-1",
            "tags": {
              "Name": "RaxxoVPC"
            },
            "tags_all": {
              "Name": "RaxxoVPC"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}